adding javascript code

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
       <h1>List Creator</h1>
       <input type="text" id="item" placeholder="Enter item" />
       <button id="add-btn">Add Item</button>
-      <button id="delete-btn">Delete Item</button>
       <button id="delete-all-btn">Delete All</button>
       <ul id="item-list"></ul>
     </div>
+
+    <script src="scripts.js"></script>
   </body>
 </html>
